--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 <body>
 
     <section id="app">
+
+        <div id="new-category-wrapper">
+            <input type="text" id="new-category-input" placeholder="New category" />
+        </div>
+
         <ul id="category-list">
             <li v-for="cat in categories" class="category-list-item">
-                {{ cat.name }}
+                <h3 class="category-name">{{ cat.name }}</h3>
                 <ul class="task-list">
                     <li v-for="task in cat.tasks" class="task-list-item">{{ task }}</li>
                 </ul>
