--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <p v-on:click="showTaskInput(index)">Add task..</p>
                     </li>
                     <li class="task-list-item">
-                        <input type="text" v-bind:id="index" v-on:keyup.enter="createTask(index)" placeholder="new task..." class="new-task-input" />
+                        <input type="text" v-bind:id="index + '-task-input'" v-on:keyup.enter="createTask(index)" placeholder="new task..." class="new-task-input" />
                     </li>
                     <li v-for="task in cat.tasks" class="task-list-item">
                         <div class="delete-icon task-delete-icon">X</div>
