--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul id="category-list">
             <li v-for="(cat, index) in categories" class="category-list-item">
 
-                <div class="delete-icon category-delete-icon">X</div>
+                <div class="delete-icon category-delete-icon" v-on:click="showModal">X</div>
                 <h3 class="category-name">{{ cat.name }}</h3>
 
                 <div class="clear"></div>
@@ -37,6 +37,9 @@
                 </ul>
             </li>
         </ul>
+
+        <!-- Modal component -->
+        <zaffri-modal v-if="modalVisible" v-bind:data="zaffriModal" v-on:hide_modal_emit="hideModal"></zaffri-modal>
     </section>
 
     <!-- Modal markup -->
