--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </li>
                     <li v-for="(task, taskIndex) in cat.tasks" class="task-list-item">
                         <div class="delete-icon task-delete-icon" v-on:click="showModal(taskIndex, 'task-delete', index)">X</div>
-                        <p>{{ task }}</p>
+                        <p v-bind:class="{'task-complete': task.complete}">{{ task.text }}</p>
 
                         <div class="clear"></div>
                     </li>
