SM: Upgraded src files added.

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         </ul>
 
         <!-- Modal component -->
-        <zaffri-modal v-if="modalVisible" v-bind:data="zaffriModal" v-on:hide_modal_emit="hideModal"></zaffri-modal>
+        <zaffri-modal v-bind:data="modalConfig"></zaffri-modal>
     </section>
 
-    <!-- Modal markup -->
-    <div id="zaffri-modal-template" class="zaffri-modal-template">
-        <div class="zaffri-modal">
+    <!-- Modal Component markup -->
+    <template id="zaffri-modal-template" class="zaffri-modal-template">
+        <div v-if="data.visible" class="zaffri-modal">
 
             <div class="zaffri-modal-body">
                 <header><h3>{{ data.title }}</h3></header>
@@ -59,18 +59,18 @@
                 <div class="zaffri-modal-button-area">
                     
                     <div v-if="data.type == 'confirm'">
-                        <button v-on:click="hideModal(true)">{{ data.confirmText }}</button>
-                        <button v-on:click="hideModal(false)">{{ data.cancelText }}</button>
+                        <button @click="closeModal(true)">{{ data.confirmText }}</button>
+                        <button @click="closeModal(false)">{{ data.cancelText }}</button>
                     </div>
 
                     <div v-else>
-                        <button v-on:click="hideModal">{{ data.confirmText }}</button>
+                        <button @click="closeModal">{{ data.confirmText }}</button>
                     </div>
                 </div>
             </div>
 
         </div>
-    </div>
+    </template>
 
     <script src="js/vue.dev.js"></script>
     <script src="js/modal.js"></script>
