--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Task Manager</title>
+    <meta charset="utf-8"/>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/modal.css" />
 </head>
@@ -42,7 +43,7 @@
         </ul>
 
         <!-- Modal component -->
-        <zaffri-modal v-bind:data="modalConfig"></zaffri-modal>
+        <zaffri-modal v-bind:data="modalConfig" v-on:hide_modal_emit="modalCallback"></zaffri-modal>
     </section>
 
     <!-- Modal Component markup -->
