--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
     </template>
 
     <script src="js/vue.dev.js"></script>
-    <script src="js/modal.js"></script>
-    <script src="js/app.js"></script>
+    <!--<script src="js/modal.js"></script>
+    <script src="js/app.js"></script>-->
 </body>
 </html>
