SM: Webpack config setup.

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,8 @@
         </div>
     </template>
 
-    <script src="js/vue.dev.js"></script>
+    <script src="./js/bundle.js"></script>
+    <!--<script src="js/vue.dev.js"></script> Remove file? -->
     <!--<script src="js/modal.js"></script>
     <script src="js/app.js"></script>-->
 </body>
