--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,22 @@
                 <div class="clear"></div>
 
                 <ul class="task-list">
+
                     <li class="task-list-item task-new">
                         <p v-on:click="showTaskInput(index)">Add task..</p>
                     </li>
+
                     <li class="task-list-item">
                         <input type="text" v-bind:id="index + '-task-input'" v-on:keyup.enter="createTask(index)" placeholder="new task..." class="new-task-input" />
                     </li>
+
                     <li v-for="(task, taskIndex) in cat.tasks" class="task-list-item">
+
+                        <div class="complete-icon-wrapper">
+                            <label for="complete-icon"><span class="complete-icon-label"></span></label>
+                            <input type="checkbox" name="complete-icon" class="complete-icon" />
+                        </div>
+
                         <div class="delete-icon task-delete-icon" v-on:click="showModal(taskIndex, 'task-delete', index)">X</div>
                         
                         <p v-bind:class="{'task-complete': task.complete}" v-on:click="toggleCompletion(taskIndex, index, task.complete)">
