--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,17 @@
             <li v-for="(cat, index) in categories" class="category-list-item">
 
                 <div class="delete-icon category-delete-icon" v-on:click="showModal(index, 'category-delete')">X</div>
-                <h3 class="category-name">
+                
+                <div class="category-name-wrapper">
 
                     <div v-if="editCatNameCheck(index)">
-                        <input type="text" placeholder="Edit name" v-bind:value="cat.name" v-model="cat.name" v-on:keyup.enter="editCategoryName()" />
+                        <input class="category-name-edit-input" type="text" placeholder="Edit name" v-bind:value="cat.name" v-model="cat.name" v-on:keyup.enter="editCategoryName()" />
                     </div>
 
                     <div v-else>
-                        <span v-on:click="setEditState([index])">{{ cat.name }}</span>
+                        <div class="category-name" v-on:click="setEditState([index])">{{ cat.name }}</div>
                     </div>    
-                </h3>
+                </div>
 
                 <div class="clear"></div>
 
