--- a/public/index.html
+++ b/public/index.html
@@ -60,11 +60,11 @@
                         
                         <!-- Edit task -->
                         <div v-if="editTaskNameCheck(index, taskIndex)">
-                            <input class="category-name-edit-input" type="text" placeholder="Edit name" v-bind:value="task.text" v-model="task.text" v-on:keyup.enter="saveAppEdits()" />
+                            <input class="task-name-edit-input" type="text" placeholder="Edit name" v-bind:value="task.text" v-model="task.text" v-on:keyup.enter="saveAppEdits()" />
                         </div>
 
                         <div v-else>
-                            <p v-bind:class="{'task-complete': task.complete}" v-on:click="setEditState([index, taskIndex])">
+                            <p class="task-text" v-bind:class="{'task-complete': task.complete}" v-on:click="setEditState([index, taskIndex])">
                                 {{ task.text }}
                             </p>
                         </div>
